welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:14: error: not found: value die3
    return die2+die3
                ^